--- a/ServerSocketProgramming/Module3/src/ClientForm.fxml
+++ b/ServerSocketProgramming/Module3/src/ClientForm.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ClientForm"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ClientFormController">
+   <children>
+      <Label layoutX="49.0" layoutY="56.0" text="client" />
+      <TextArea layoutX="49.0" layoutY="90.0" prefHeight="200.0" prefWidth="475.0" />
+      <TextField layoutX="49.0" layoutY="320.0" prefHeight="31.0" prefWidth="378.0" />
+      <Button layoutX="459.0" layoutY="320.0" mnemonicParsing="false" text="send" />
+   </children>
 </AnchorPane>
